Complete Mock Tests Security Config