@@ -1,5 +1,6 @@
 package guru.springframework.spring7restmvc.controller;
 
+import guru.springframework.spring7restmvc.config.SpringSecConfig;
 import guru.springframework.spring7restmvc.model.CustomerDTO;
 import guru.springframework.spring7restmvc.services.CustomerService;
 import guru.springframework.spring7restmvc.services.CustomerServiceImpl;
@@ -11,6 +12,7 @@ import org.mockito.Captor;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
@@ -26,11 +28,13 @@ import static org.hamcrest.core.Is.is;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.httpBasic;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @ExtendWith(MockitoExtension.class)
 @WebMvcTest(CustomerController.class)
+@Import(SpringSecConfig.class)
 class CustomerControllerTest {
 
   @Autowired
@@ -57,12 +61,13 @@ class CustomerControllerTest {
 
   @Test
   void testPatchCustomer() throws Exception {
-    CustomerDTO customer = customerServiceImpl.getAllCustomers().getFirst();
+    CustomerDTO customer = customerServiceImpl.getAllCustomers().get(0);
 
     Map<String, Object> customerMap = new HashMap<>();
     customerMap.put("name", "New Name");
 
-    mockMvc.perform(patch( CustomerController.CUSTOMER_PATH_ID, customer.getId())
+    mockMvc.perform(patch(CustomerController.CUSTOMER_PATH_ID, customer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .contentType(MediaType.APPLICATION_JSON)
         .content(objectMapper.writeValueAsString(customerMap)))
       .andExpect(status().isNoContent());
@@ -77,11 +82,12 @@ class CustomerControllerTest {
 
   @Test
   void testDeleteCustomer() throws Exception {
-    CustomerDTO customer = customerServiceImpl.getAllCustomers().getFirst();
+    CustomerDTO customer = customerServiceImpl.getAllCustomers().get(0);
 
     given(customerService.deleteCustomerById(any())).willReturn(true);
 
     mockMvc.perform(delete(CustomerController.CUSTOMER_PATH_ID, customer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .contentType(MediaType.APPLICATION_JSON))
       .andExpect(status().isNoContent());
 
@@ -92,12 +98,13 @@ class CustomerControllerTest {
 
   @Test
   void testUpdateCustomer() throws Exception {
-    CustomerDTO customer = customerServiceImpl.getAllCustomers().getFirst();
+    CustomerDTO customer = customerServiceImpl.getAllCustomers().get(0);
 
     given(customerService.updateCustomerById(any(), any())).willReturn(Optional.of(CustomerDTO.builder()
       .build()));
 
     mockMvc.perform(put(CustomerController.CUSTOMER_PATH_ID, customer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .content(objectMapper.writeValueAsString(customer))
         .contentType(MediaType.APPLICATION_JSON)
         .accept(MediaType.APPLICATION_JSON))
@@ -110,7 +117,7 @@ class CustomerControllerTest {
 
   @Test
   void testCreateCustomer() throws Exception {
-    CustomerDTO customer = customerServiceImpl.getAllCustomers().getFirst();
+    CustomerDTO customer = customerServiceImpl.getAllCustomers().get(0);
     customer.setId(null);
     customer.setVersion(null);
 
@@ -118,6 +125,7 @@ class CustomerControllerTest {
       .willReturn(customerServiceImpl.getAllCustomers().get(1));
 
     mockMvc.perform(post(CustomerController.CUSTOMER_PATH).contentType(MediaType.APPLICATION_JSON)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .accept(MediaType.APPLICATION_JSON)
         .content(objectMapper.writeValueAsString(customer)))
       .andExpect(status().isCreated())
@@ -129,6 +137,7 @@ class CustomerControllerTest {
     given(customerService.getAllCustomers()).willReturn(customerServiceImpl.getAllCustomers());
 
     mockMvc.perform(get(CustomerController.CUSTOMER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .accept(MediaType.APPLICATION_JSON))
       .andExpect(status().isOk())
       .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -137,19 +146,22 @@ class CustomerControllerTest {
 
   @Test
   void getCustomerByIdNotFound() throws Exception {
+
     given(customerService.getCustomerById(any(UUID.class))).willReturn(Optional.empty());
 
-    mockMvc.perform(get(CustomerController.CUSTOMER_PATH_ID, UUID.randomUUID()))
+    mockMvc.perform(get(CustomerController.CUSTOMER_PATH_ID, UUID.randomUUID())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD)))
       .andExpect(status().isNotFound());
   }
 
   @Test
   void getCustomerById() throws Exception {
-    CustomerDTO customer = customerServiceImpl.getAllCustomers().getFirst();
+    CustomerDTO customer = customerServiceImpl.getAllCustomers().get(0);
 
     given(customerService.getCustomerById(customer.getId())).willReturn(Optional.of(customer));
 
     mockMvc.perform(get(CustomerController.CUSTOMER_PATH_ID, customer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .accept(MediaType.APPLICATION_JSON))
       .andExpect(status().isOk())
       .andExpect(content().contentType(MediaType.APPLICATION_JSON))
